deployment/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: demo-image
          livenessProbe:
            httpGet:
              port: 9000
              path: /actuator/health/liveness
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              port: 9000
              path: /actuator/health/readiness
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8080
              name: app-port
            - containerPort: 5005
              name: debug-port
