deployment/base/client-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-port
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 8080
      targetPort: 8080
    - name: debug-port
      port: 5005
      targetPort: 5005
  selector:
    app: demo-app
